--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ sudo: false
 
 # Blacklist
 branches:
-  except:
-    - gh-pages
+  only:
+    - master
 
 # Environment variables
 env:
@@ -24,8 +24,8 @@ addons:
       - graphviz
 
 # Build your code e.g. by calling make
-script:
-  - make
+#script:
+#  - make
 
 # Generate and deploy documentation
 after_success:
