--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ addons:
       - graphviz
 
 # Build your code e.g. by calling make
-#script:
-#  - make
+script:
+  - doxygen Doxyfile
 
 # Generate and deploy documentation
 after_success:
